compiler/tests/fuzz/negative_corpus/check_immutable_assign.mlc
fn f() -> i32 = do
  let x = 1
  x = 2
  x
end
